# project-sell-in-forecast

./: .gitignore  02_lightgbm_sell_in.ipynb  02_lightgbm_sell_in_extra_trees.ipynb  03_randomforests_sell_in.ipynb  04_xgboost_sell_in.ipynb  05_sell_in_mlflow_depth10.ipynb  05_sell_in_mlflow_depth8.ipynb  06_sell_in_xai.ipynb  0701_sell_in_mlflow_format_models_+cliente.ipynb  0702_sell_in_mlflow_format_models_lin_reg.ipynb  07_sell_in_fase_5_comparativa_modelos.ipynb  07_sell_in_fase_5_comparativa_modelos_opt.ipynb  07_sell_in_mlflow_format_models-Copy1.ipynb  07_sell_in_mlflow_format_models.ipynb  07_sell_in_mlflow_format_models_df05.ipynb  07_sell_in_mlflow_format_models_df06.ipynb  07_sell_in_mlflow_format_models_df07.ipynb  README.md  XX_client_clustering.ipynb  pyproject.toml
