[tool.poetry]
name = "msm-sell-in-prediction"
version = "0.1.0"
description = ""
authors = ["gmachin"]
readme = "README.md"
packages = [{include = "msm_sell_in_prediction"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
session-info = "^1.0.0"
pandas = ">=1.3.5,<2.0.0"
jupyter = "^1.0.0"
ipykernel = "^6.24.0"
numpy = ">=1.21.6,<1.24.0"
neuralprophet = "^0.6.2"
seaborn = "^0.12.2"
plotly = "^5.15.0"
nbformat = "^5.9.1"
statsmodels = "^0.14.0"
lightgbm = "^3.3.5"
optuna = "^3.2.0"
category-encoders = "^2.6.1"
dython = "^0.7.4"
xgboost = "^1.7.6"
mlflow = "^2.8.0"
shapash = "2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
